test/langtools/tools/javac/patterns/T8317300.out
T8317300.java:13:18: compiler.err.mod.not.allowed.here: final
T8317300.java:20:22: compiler.err.illegal.start.of.expr
T8317300.java:20:31: compiler.err.expected: token.identifier
T8317300.java:20:37: compiler.err.expected: ';'
4 errors
